--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 #container{
-margin-top: 50px;
+margin-top: 30px;
 display: flex;
-background-color: peachpuff;
+background-color: rgb(245, 194, 149);
 flex-wrap: wrap;
 max-width: 560px;
 max-height: 560px;
-border: 2px solid red;
+padding: 10px;
 }
 
 .gridbox{
@@ -38,12 +38,34 @@ h1{
 }
 
 button{
-    padding: 3px;
+    padding: 10px;
     background-color: red;
     border-radius: 5px;
-    border: none;
+    border: 2px solid black;
 }
 
 button:hover{
-    background-color: pink;
+    background-color: maroon;
+    transform: scale(1.05);
+    transition: ease-in-out;
+}
+
+.leftcont{
+    background-color: rgba(173, 103, 42, 0.997);
+    padding: 100px 100px;
+    border-radius: 5px;
+    max-width: 200px;
+    gap: 25px;
+    display: flex;
+    flex-direction: column;
+}
+
+.container{
+    background-color: rgb(253, 204, 161);
+    padding: 50px;
+}
+
+.usrinpt{
+    justify-content: center;
+    display: flex;
 }
